--- a/PharmacyMedicineSupplyPortal/Views/Home/Dashboard.cshtml
+++ b/PharmacyMedicineSupplyPortal/Views/Home/Dashboard.cshtml
@@ -9,8 +9,8 @@
             <h1 class="mb-2">Welcome to the Dashboard</h1>
             <div class="row justify-content-center">
                 <div class="col-md-4 px-2">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top img-thumbnail" src="~/images/mr.jpg" alt="Card image cap" style="height:250px;width:250px">
+                    <div class="card card-width" >
+                        <img class="card-img-top img-thumbnail img-style" src="~/images/mr.jpg" alt="Card image cap" >
                         <div class="card-body">
                             <h5 class="card-title">Medical Representative Schedule</h5>
                             <a asp-controller="MRScheduleMeet" asp-action="EnterDate" class="btn btn-primary">Go to schedule meeting</a>
@@ -18,8 +18,8 @@
                     </div>
                 </div>
                 <div class="col-md-4 px-2">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top img-thumbnail" src="~/images/med.jpg" alt="Card image cap" style="height:250px;width:250px">
+                    <div class="card card-width">
+                        <img class="card-img-top img-thumbnail img-style" src="~/images/med.jpg" alt="Card image cap" >
                         <div class="card-body">
                             <h5 class="card-title">Demand Medicines</h5>
                             <a asp-controller="DemandSupply" asp-action="Index" class="btn btn-primary">Demand Medicine</a>
